--- a/english_list/templates/english_list/list_word.html
+++ b/english_list/templates/english_list/list_word.html
@@ -52,7 +52,7 @@
                          aria-label="Search" value="{{ keyword }}">
         <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search" style="color: deepskyblue"></i>
             単語検索
-        </button>
+        </button>　AND検索の場合は、単語と単語の間にスペース
     </p>
 </form>
 <form method="post" action="{% url 'english_list:export' %}">
